--- a/Checklists/Checklists/Base.lproj/Main.storyboard
+++ b/Checklists/Checklists/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C68" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="GQs-W0-4rj">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="GQs-W0-4rj">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -154,7 +154,7 @@
         <!--List Detail-->
         <scene sceneID="UMt-TH-n9Q">
             <objects>
-                <tableViewController id="hii-kz-cPc" sceneMemberID="viewController">
+                <tableViewController id="hii-kz-cPc" customClass="ListDetailViewController" customModule="Checklists" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="GlQ-qp-pxr">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -166,7 +166,7 @@
                                         <rect key="frame" x="0.0" y="35" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ABJ-3Q-xFY" id="Ej9-Jj-g7u">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Dbd-I3-pSZ">
@@ -188,9 +188,21 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="List Detail" id="qPq-FC-kld">
-                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="80e-fZ-g8s"/>
-                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="fCQ-a0-1Hm"/>
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="80e-fZ-g8s">
+                            <connections>
+                                <action selector="cancel" destination="hii-kz-cPc" id="zqk-TA-QBw"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="fCQ-a0-1Hm">
+                            <connections>
+                                <action selector="done" destination="hii-kz-cPc" id="xbO-W4-U2c"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="doneButon" destination="fCQ-a0-1Hm" id="swb-4o-HfL"/>
+                        <outlet property="listText" destination="Dbd-I3-pSZ" id="RF9-Ya-7WY"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="kBz-Np-xMN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
